[gd_scene load_steps=9 format=3 uid="uid://dtq6m6xvw3gy0"]

[ext_resource type="Script" path="res://components/rain_drop.gd" id="1_i231v"]
[ext_resource type="Texture2D" uid="uid://bq3mi3pursprd" path="res://art/rain_drop-Sheet.png" id="1_mosur"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gfuke"]
radius = 6.08276

[sub_resource type="Animation" id="Animation_uqbug"]
resource_name = "drop"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_676vt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7o638"]
resource_name = "fall"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 6, 7]
}

[sub_resource type="Animation" id="Animation_yjbx4"]
resource_name = "splash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8msov"]
_data = {
"RESET": SubResource("Animation_676vt"),
"drop": SubResource("Animation_uqbug"),
"fall": SubResource("Animation_7o638"),
"splash": SubResource("Animation_yjbx4")
}

[node name="RainDrop" type="Area2D"]
script = ExtResource("1_i231v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gfuke")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 8)
texture = ExtResource("1_mosur")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8msov")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
